# Kanban-App

./: .dockerignore  .gitignore  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: ai.py  db.py  main.py  models.py
backend/app/static/: index.html
backend/tests/: test_ai.py  test_auth.py  test_board.py  test_chat.py  test_health.py
docs/: DATABASE.md  code_review.md  code_review_exceptions.md
frontend/: Dockerfile.e2e  package.json  playwright.config.ts
frontend/src/components/: AppGate.test.tsx  AppGate.tsx  ChatSidebar.test.tsx  ChatSidebar.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanColumn.tsx  LoginForm.tsx
frontend/src/lib/: api.test.ts  api.ts  auth.ts
frontend/test-results/: .last-run.json
frontend/tests/: auth.spec.ts  chat.spec.ts  dnd-empty.spec.ts  kanban.spec.ts  seed.ts
scripts/: start.ps1
